Fixed styling on mobile

--- a/style.css
+++ b/style.css
@@ -117,14 +117,14 @@ a:hover{
 .container{
    background-color: #6d6875;
    width: 80vw;
-   height: 100vh;
+   height: 100%;
    box-shadow: 10px 0px 50px rgba(0,0,0,0.1), -10px 0px 50px rgba(0,0,0,0.1);
    margin-top: 0;
    border-radius: 20px 20px 0 0;
 }
 .game-post{
    position: relative;
-   height: 500px;
+   height: 100%;
    width: 100%;
    padding: 3%;
 }
@@ -252,7 +252,7 @@ a:hover{
       font-size: 1rem !important;
    }
    .container{
-      height: 100vh;
+      height: 100%;
       width: 100%;
       margin: 0 !important;
       padding: 0;
